--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -3,12 +3,12 @@
 # -----------------------------------------------------------------------------
 add_subdirectory(wtf)
 
-add_subdirectory(cssengine)
+add_subdirectory(csseng)
 
 if (ENABLE_API_TESTS)
     add_subdirectory(test)
 endif ()
 
-add_subdirectory(samples)
+add_subdirectory(examples)
 
-FOOBAR_INCLUDE_CONFIG_FILES_IF_EXISTS()
+CSSENG_INCLUDE_CONFIG_FILES_IF_EXISTS()
