--- a/source/wtf/wtf/CMakeLists.txt
+++ b/source/wtf/wtf/CMakeLists.txt
@@ -27,24 +27,24 @@ set(WTF_LIBRARIES
 )
 
 #if (NOT USE_SYSTEM_MALLOC)
-#    list(APPEND WTF_LIBRARIES FooBar::bmalloc)
+#    list(APPEND WTF_LIBRARIES CSSEng::bmalloc)
 #endif ()
 
 set(WTF_INTERFACE_LIBRARIES WTF)
 set(WTF_INTERFACE_INCLUDE_DIRECTORIES ${WTF_FRAMEWORK_HEADERS_DIR})
 set(WTF_INTERFACE_DEPENDENCIES WTF_CopyHeaders)
 
-FOOBAR_FRAMEWORK_DECLARE(WTF)
-FOOBAR_INCLUDE_CONFIG_FILES_IF_EXISTS()
+CSSENG_FRAMEWORK_DECLARE(WTF)
+CSSENG_INCLUDE_CONFIG_FILES_IF_EXISTS()
 
-FOOBAR_COPY_FILES(WTF_CopyHeaders
+CSSENG_COPY_FILES(WTF_CopyHeaders
     DESTINATION ${WTF_FRAMEWORK_HEADERS_DIR}/wtf
     FILES ${WTF_PUBLIC_HEADERS}
 )
 
-FOOBAR_WRAP_SOURCELIST(${WTF_SOURCES})
-FOOBAR_FRAMEWORK(WTF)
-FOOBAR_FRAMEWORK_TARGET(WTF)
+CSSENG_WRAP_SOURCELIST(${WTF_SOURCES})
+CSSENG_FRAMEWORK(WTF)
+CSSENG_FRAMEWORK_TARGET(WTF)
 
 if (MSVC)
     set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /SUBSYSTEM:WINDOWS")
