check LibCheck; cleanup API tests

--- a/source/test/CMakeLists.txt
+++ b/source/test/CMakeLists.txt
@@ -132,3 +132,9 @@ set(select_LIBRARIES
 CSSENG_EXECUTABLE(select)
 CSSENG_COMPUTE_SOURCES(select)
 
+if (LIBCHECK_FOUND)
+    add_subdirectory(wapcaplet)
+endif ()
+
+add_subdirectory(parserutils)
+
